--- a/deck.mdx
+++ b/deck.mdx
@@ -71,7 +71,7 @@ A lot of basic types we use lack clarity and do not have the correct flexibility
   ```py 1:9 title="Value Object Pattern Motivation" file="./src/s3_path.py"
   ```
 
-  ```py 7:9 title="Innapropriate Types Place Validation Burden on System Call site" file="./src/s3_path.py"
+  ```py 7:9 title="Innapropriate types place validation burden on system (call site)" file="./src/s3_path.py"
   ```
 
 </CodeSurfer>
